--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "react": "^19.1.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.7"
